# researchtwin

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  detailed_medium_article.md  discord_bot.py  docker-compose.yml  invitation_email.md  medium_article.md  node_config.json.example  run_node.py  s_index_v2_reference.py  whitepaper.tex  whitepaper_latest.tex
.github/workflows/: security-check.yml
backend/: Dockerfile  cache.py  database.py  discord_bot.py  email_service.py  geocoder.py  main.py  models.py  qic_index.py  rag.py  requirements.txt  researchers.py
backend/connectors/: __init__.py  affiliations.py  figshare.py  github_connector.py  google_scholar.py  orcid.py  semantic_scholar.py
discord/: how-to-guide.md
docs/: API.md  HUB_FEDERATION.md  PROJECT_INDEX.md  SELF_HOSTING.md  email-setup.md
frontend/: chat-widget.html  embed.html  index.html  join.html  map.html  privacy.html  terms.html  update.html
frontend/.well-known/: ai-plugin.json  openapi.json
mcp-server/: README.md  pyproject.toml  server.json
mcp-server/src/mcp_server_researchtwin/: __init__.py  __main__.py  server.py
my_research_node_deprecated/: CODE_OF_CONDUCT.md  install-edge.sh  tier2_local_node.py
my_research_node_deprecated/frontend/src/components/: ResearchOnboarding.js
my_research_node_deprecated/gateway/: main.py
nginx/: researchtwin-ssl.conf
researchtwin_complete_package/: discord_bot.py  medium_article.md  whitepaper.tex
scripts/: generate_icons.py
