[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-researchtwin"
version = "0.1.0"
description = "MCP server for ResearchTwin inter-agentic research discovery API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Martin Frasch", email = "martin@researchtwin.net" },
]
keywords = ["mcp", "research", "discovery", "digital-twin", "s-index", "semantic-scholar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp>=1.9.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://researchtwin.net"
Repository = "https://github.com/martinfrasch/researchtwin"
Issues = "https://github.com/martinfrasch/researchtwin/issues"

[project.scripts]
mcp-server-researchtwin = "mcp_server_researchtwin.server:main"
